cluster/homelab/apps/CTF/CTFd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctfd
  namespace: ctf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ctfd
  template:
    metadata:
      labels:
        app: ctfd
    spec:
      volumes:
        - name: uploads
          persistantVolumeClaim:
            claimName: uploads-pvc
      containers:
        - name: ctfd
          image: ctfd/ctfd
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /var/uploads
              name: uploads
          ports:
            - containerPort: 8000
