cluster/homelab/apps/CTF/CTFd/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: ctf
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
        - name: data
          persistantVolumeClaim:
            claimName: redis-pvc
      containers:
        - name: redis
          image: redis:4
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: data
              mountPath: /data
