cluster/homelab/apps/CTF/CTFd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ctfd
  namespace: ctf
spec:
  selector:
    app: ctfd
  ports:
    - port: 8000
      targetPort: 8000
